[#8335] fix(client): Fix double encoding issue and add missing URL encoding (#8336)
### What changes were proposed in this pull request?

This PR mainly fixes server things:

1. Fix the double encoding issue. Because Java and Python client will
automatically encode the query parameters. Doing it manually will encode
the string twice, which will lead to unexpected issues.
2. Add missing encoding in the URL.
3. Add a client version number in the header to let the server check and
do the action based on the version.

### Why are the changes needed?

Fix the double encoding problem.

Fix: #8335 

### Does this PR introduce _any_ user-facing change?

Yes, the change will break the backward compatibility for fileset
related interfaces.

### How was this patch tested?

Local test.